Alignment Issues

--- a/src/App.css
+++ b/src/App.css
@@ -912,6 +912,10 @@ input[type="checkbox"] {
   color: #777;
 }
 
+.timeline-gpa {
+  font-size: 14px;
+}
+
 /* Responsive Design */
 @media (max-width: 1200px) {
   .portfolio--section--container {
@@ -1008,11 +1012,6 @@ input[type="checkbox"] {
   font-weight: bold;
 }
 
-.timeline-subtitle {
-  font-size: 12px;
-  color: #777;
-}
-
 .timeline-role {
   font-size: 16px;
   font-weight: 600;
@@ -1025,11 +1024,6 @@ input[type="checkbox"] {
   display: block;
   margin-bottom: 8px;
 }
-
-.timeline-gpa {
-  font-size: 14px;
-}
-
 /* Responsibilities */
 .timeline-responsibilities {
   padding-left: 20px;
@@ -1050,6 +1044,10 @@ input[type="checkbox"] {
     padding-left: 8px;
   }
 
+  .timeline-gpa {
+    font-size: 12px;
+  }
+  
   .timeline-item::before {
     left: -9px;
     width: 7px;
@@ -1058,7 +1056,7 @@ input[type="checkbox"] {
   }
 
   .timeline-header {
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
   }
 
@@ -1087,6 +1085,10 @@ input[type="checkbox"] {
   .timeline-responsibilities li {
     font-size: 14px;
   }
+  .timeline-subtitle {
+    font-size: 12px;
+    color: #777;
+  }  
 }
 
 @media (max-width: 480px) {
@@ -1117,11 +1119,13 @@ input[type="checkbox"] {
   }
 
   .timeline-duration {
-    font-size: 11px;
+    font-size: 12px;
+    margin-bottom: 3px;
   }
 
   .timeline-responsibilities {
     padding-left: 10px;
+    margin-top: 0;
   }
 
   .timeline-responsibilities li {
@@ -1136,4 +1140,15 @@ input[type="checkbox"] {
   .timeline-header {
     gap: 7px;
   }
+  .timeline-subtitle {
+    font-size: 12px;
+    color: #777;
+  }  
+  .hero--section-description {
+    font-size: 12px;
+  }
+}
+
+.timeline-coursework > ul {
+  margin-top: 0;
 }
